cabal-version:      3.0
name: chask
version: 0.1.0.0
-- synopsis:
-- description:
license: NONE
author: John Berthels
maintainer: john.berthels@gmail.com
-- A copyright notice.
-- copyright:
build-type: Simple
-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
-- extra-doc-files:
-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: 
        -- -Wall
        -fwarn-tabs
        -- -fwarn-name-shadowing
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-patterns
        -fwarn-overlapping-patterns
        -fwarn-incomplete-record-updates
        -fwarn-orphans

library
    import: warnings
    exposed-modules: Chask
    ghc-options: -fno-ignore-asserts    
    -- other-modules:
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: 
        base
        , bytestring
        , base64-bytestring
        , bytestring
        , split
        , containers

executable set1
    -- Import common warning flags.
    import: warnings
    ghc-options: -fno-ignore-asserts    
    -- .hs or .lhs file containing the Main module.
    main-is: Set1.hs
    -- Modules included in this executable, other than Main.
    other-modules:
        Chask
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- Other library packages from which modules are imported.
    build-depends: 
        base
        , bytestring
        , base64-bytestring
        , bytestring
        , split
        , containers

    -- Directories containing source files.
    hs-source-dirs: app, src
    default-language: Haskell2010


Test-Suite test-set1
    import: warnings
    type:       exitcode-stdio-1.0
    main-is:    Set1.hs
    default-language: Haskell2010
    hs-source-dirs: tests, src
    build-depends:
        base
        , HUnit
        , bytestring
        , base64-bytestring
        , bytestring
        , split
        , containers

